syntax = "proto3";

package dousheng.video;
option go_package="github.com/Go-To-Byte/DouSheng/video_service/apps/video";

import "github.com/Go-To-Byte/DouSheng/user_center/apps/user/pb/user.proto";

// 定义 Video 模块接口
service Service {
  // 视频 feed 流
  rpc FeedVideos(FeedVideosRequest) returns (FeedSetResponse);
  // 视频发布
  rpc PublishVideo(PublishVideoRequest) returns (PublishVideoResponse);
  // 用户发布视频的列表
  rpc PublishList(PublishListRequest) returns (PublishListResponse);
}

message Video {
  // 视频唯一标识
  // @gotags: json:"id"
  int64 id = 1;
  // 视频作者
  // @gotags: json:"author"
  user.User author = 2;
  // 视频播放地址
  // @gotags: json:"play_url"
  string play_url = 3;
  // 视频封面地址
  // @gotags: json:"cover_url"
  string cover_url = 4;
  // 视频的点赞总数
  // @gotags: json:"favorite_count"
  int64 favorite_count = 5;
  // 视频的评论总数
  // @gotags: json:"comment_count"
  int64 comment_count = 6;
  // true-已点赞,false-未点赞
  // @gotags: json:"is_favorite"
  bool is_favorite = 7;
  // 视频标题
  // @gotags: json:"title"
  string title = 8;
}

message VideoPo {
  // 视频唯一标识
  // @gotags: json:"id"
  int64 id = 1;
  // 视频作者ID TODO：若从视频列表中获取数据过多，这里可以直接用User[二次遍历]
  // 视频播放地址
  // @gotags: json:"play_url"
  string play_url = 2;
  // 视频封面地址
  // @gotags: json:"cover_url"
  string cover_url = 3;
  // 视频标题
  // @gotags: json:"title"
  string title = 4;
  // @gotags: json:"author_id"
  int64 author_id = 5;
  // @gotags: json:"created_at"
  int64 created_at = 6;
}

// 分页请求参数 TODO：可以放在公共模块
message PageRequest {
  // 每页数据数量
  // @gotags: json:"page_size" form:"page_size"
  uint64 page_size = 1;
  // 第几页
  // @gotags: json:"page_number" form:"page_number"
  uint64 page_number = 2;
  // 偏移量
  // @gotags: json:"offset" form:"offset"
  int64 offset = 3;
}

message FeedVideosRequest {
  // 分页参数
  // @gotags: json:"page"
  PageRequest page = 1;
  // 可选参数，限制返回视频的最新投稿时间戳，精确到秒，不填表示当前时间
  // @gotags: json:"latest_time" form:"latest_time"
  optional int64 latest_time = 2;
  // 可选参数，登录用户设置
  // @gotags: json:"token" form:"token"
  optional string token = 3;
}

message PublishVideoRequest {
  // 用户鉴权Token
  // @gotags: json:"token" form:"token" binding:"required"
  string token = 1;
  // 视频标题
  // @gotags: json:"title" form:"title" binding:"required" validate:"required"
  string title = 2;
  // 视频播放地址
  // @gotags: json:"play_url"
  string play_url = 3;
  // 视频封面地址
  // @gotags: json:"cover_url"
  string cover_url = 4;
}

// 发布列表的 请求 model
message PublishListRequest {
  // 用户ID
  // @gotags: json:"user_id" form:"user_id" validate:"required" binding:"required"
  int64 user_id = 1;
  // 用户鉴权Token
  // @gotags: json:"token" form:"token" binding:"required"
  string token = 2;
}

message FeedSetResponse {
  // 本次返回的视频中，发布最早的时间，作为下次请求的latest_time
  // @gotags: json:"next_time"
  optional int64 next_time = 2;
  // 视频列表
  // @gotags: json:"video_list"
  repeated Video video_list = 1;
}

message PublishVideoResponse {
  // 可以携带一些额外属性
  // @gotags: json:"mate"
  map<string, string> mate = 1;
}

message PublishListResponse {
  // 用户发布的视频列表
  // @gotags: json:"video_list"
  repeated Video video_list = 1;
}